# PovTracer

./:    .gitignore  CMakeLists.txt  README.txt  install_dependencies.sh
assets/cornell/: CornellBoxReflection.pov  RScornell.pov  cornellSimple.pov  simple-gi-textured.pov  simple-gi.pov
assets/povray/: box.pov  multilights.pov  planes.pov  recurse_simp2.pov  refract2.pov  refract_refl.pov  schlick1.pov  schlick2.pov  simp_cam.pov  simp_cam0.pov  simp_cam1.pov  simp_cam2.pov  simp_cam3.pov  simple.pov  simple_box.pov  simple_reflect1.pov  simple_reflect2.pov  simple_reflect3.pov  simple_refract.pov  simple_tri.pov  spheres.pov  valentine2.pov
assets/stress/: balls2.pov  bunny.pov  bunny_small_tris.pov  gnarly.pov
assets/texture/: earth.pov
include/: Precision.hpp  stb
include/base/: Hit.hpp  Ray.hpp
include/camera/: Camera.hpp
include/geometry/: Box.hpp  IGeometry.hpp  Plane.hpp  Sphere.hpp  Triangle.hpp
include/light/: PointLight.hpp
include/log/: ILogger.hpp  NullLogger.hpp  TestLogger.hpp
include/material/: BRDF.hpp  Beckmann.hpp  CookTorrance.hpp  LambertianBRDF.hpp  NullBRDF.hpp  OrenNayar.hpp  PhongBRDF.hpp
include/math/: Maths.hpp  Transform.hpp
include/povray/: ParseException.hpp  PovParser.hpp  PovUtil.hpp
include/render/: FlatRenderer.hpp  MonteCarloRenderer.hpp  PhongRenderer.hpp  ReflectRefractRenderer.hpp  Renderer.hpp  SchlickRenderer.hpp  SpecDiffuseBRDFRenderer.hpp  VisNormalsRenderer.hpp
include/scene/: Scene.hpp  World.hpp
include/shade/: ColorPigment.hpp  Finish.hpp  IMapping.hpp  IPigment.hpp  Pigment.hpp  (+5 more)
src/: main.cpp
(+114 files in other folders)
